--- a/GenerateObjectCsvFile.cls
+++ b/GenerateObjectCsvFile.cls
@@ -1,6 +1,11 @@
 public with sharing class GenerateObjectCsvFile {
 
+    static String separator=';';
+    static String columnDelimiter='"';
+
+
     static List<String> csvHeaders =new List<String>();
+    static List<String> soqlColumn =new List<String>();
 
 
     public static void generateFile(String sObjectApiName,Datetime lastExport,String fileTitle){
@@ -9,23 +14,25 @@ public with sharing class GenerateObjectCsvFile {
 
     public static String generateSoqlQuery(String sObjectApiName,Datetime lastExport){
         for(FieldDefinition fieldDef : [SELECT QualifiedApiName   FROM FieldDefinition WHERE EntityDefinition.QualifiedApiName =:sObjectApiName AND IsCalculated = false]){
-            csvHeaders.add(fieldDef.QualifiedApiName);
+            csvHeaders.add(columnDelimiter+fieldDef.QualifiedApiName+columnDelimiter);
+            soqlColumn.add(fieldDef.QualifiedApiName);
         }
 
-        return 'SELECT '+String.join(csvHeaders,',')+' FROM '+sObjectApiName +' WHERE LastModifiedDate >:lastExport ALL ROWS';
+        return 'SELECT '+String.join(soqlColumn,',')+' FROM '+sObjectApiName +' WHERE LastModifiedDate >:lastExport ALL ROWS';
     }
 
 
     public static List<Sobject> getResult(String sObjectApiName,Datetime lastExport){
-        return Database.query(generateSoqlQuery(sObjectApiName,lastExport));
+        String soqlQuery=generateSoqlQuery(sObjectApiName,lastExport);
+        return Database.query(soqlQuery);
     }
 
 
 
     public static void createCSV(List<sObject> csvRowList, String title){
-        String headerRow = String.join(csvHeaders,',') + '\n';
+        String headerRow = String.join(csvHeaders,separator) + '\n';
         String concantenatedStr = headerRow;
-        concantenatedStr = createSObjectString(csvHeaders, csvRowList, concantenatedStr);
+        concantenatedStr = createSObjectString(soqlColumn, csvRowList, concantenatedStr);
         title += '.csv';
         createFile(concantenatedStr, title);
     }
@@ -39,9 +46,9 @@ public with sharing class GenerateObjectCsvFile {
             Map<String, Object> objFieldMap = (Map<String, Object>)JSON.deserializeUntyped(JSON.serialize(row));
             Integer j = 0;
             for(String objField :csvFieldAPINames){
-                concantenatedStr += objFieldMap.get(objField) != null ? String.valueOf(objFieldMap.get(objField)) : '';
+                concantenatedStr += objFieldMap.get(objField) != null ? columnDelimiter+String.valueOf(objFieldMap.get(objField))+columnDelimiter :columnDelimiter+ ''+columnDelimiter;
                 j++;
-                concantenatedStr += j != headerSize ? ',' : '';//add comma separator
+                concantenatedStr += j != headerSize ? separator : '';//add comma separator
             }
             i++;
             if(i != rowListSize) concantenatedStr += '\n';//add new line
@@ -57,5 +64,17 @@ public with sharing class GenerateObjectCsvFile {
         cv.PathOnClient = title; // full path within Salesforce this can just be the name of file to be in the library
         cv.VersionData = Blob.valueOf(versionData); //file data
         insert cv;
+        createContentDistribution(cv);
     }
+
+
+    private static void createContentDistribution(ContentVersion cv){
+        ContentDistribution newDist = new ContentDistribution();
+        newDist.ContentVersionId = cv.Id;
+        newDist.Name = cv.Title+' external link';
+        newDist.PreferencesNotifyOnVisit = false;
+        newDist.PreferencesAllowViewInBrowser = true;
+        newDist.PreferencesAllowOriginalDownload=true;
+        insert newDist;
+    } 
 }
